--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "iles-app",
   "version": "0.0.0",
   "scripts": {
-    "dev": "iles dev --open",
+    "dev": "iles dev --open --host",
     "build": "iles build",
     "preview": "iles preview --open --port 5050",
     "test": "iles test",
@@ -12,9 +12,15 @@
     "node": "^14.18 || >= 16.0.0"
   },
   "devDependencies": {
-    "iles": "^0.7.19",
-    "typescript": "^4.5",
+    "@iconify/json": "^2.1.30",
+    "@islands/icons": "^0.1.1",
+    "@islands/images": "^0.3.2",
+    "@vueuse/core": "^8.3.0",
+    "iles": "^0.7.38",
+    "quicklink": "^2.2.0",
+    "typescript": "^4.6.3",
+    "unocss": "^0.31.8",
     "vitest": "*",
-    "vue-tsc": "^0.29"
+    "vue-tsc": "^0.34.7"
   }
 }
