--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@islands/icons": "^0.1.1",
     "@islands/images": "^0.3.2",
     "@vueuse/core": "^8.3.0",
+    "autoprefixer": "^10.4.4",
     "iles": "^0.7.38",
+    "postcss": "^8.4.12",
     "quicklink": "^2.2.0",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
-    "unocss": "^0.31.8",
     "vitest": "*",
     "vue-tsc": "^0.34.7"
   }
