--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@islands/images": "^0.3.2",
     "@vueuse/core": "^8.3.0",
     "autoprefixer": "^10.4.4",
+    "axios": "^0.26.1",
     "iles": "^0.7.38",
     "postcss": "^8.4.12",
     "quicklink": "^2.2.0",
