--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,12 @@
+[build.environment]
+  NPM_FLAGS = "--version"
+  NODE_VERSION = "16"
+
 [build]
   publish = "dist"
   command = "npx pnpm i --store=node_modules/.pnpm-store && npx pnpm run build"
 
-[build.environment]
-  NODE_VERSION = "16"
-  NPM_FLAGS = "--version" # uncomment if using pnpm to skip npm install
+[[headers]]
+  for = "/manifest.webmanifest"
+  [headers.values]
+    Content-Type = "application/manifest+json"
