--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "iles-app",
-  "version": "0.0.0",
+  "name": "imsus-dev",
+  "version": "1.0.0",
   "scripts": {
     "dev": "iles dev --open --host",
     "build": "iles build",
@@ -23,6 +23,7 @@
     "quicklink": "^2.2.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
+    "vite-plugin-pwa": "^0.11.11",
     "vitest": "*",
     "vue-tsc": "^0.34.7"
   }
