--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "iles dev --open --host",
-    "build": "iles build",
+    "build": "iles build && workbox generateSW",
     "preview": "iles preview --open --port 5050",
     "test": "iles test",
     "typecheck": "vue-tsc --noEmit"
@@ -23,8 +23,8 @@
     "quicklink": "^2.2.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3",
-    "vite-plugin-pwa": "^0.11.11",
     "vitest": "*",
-    "vue-tsc": "^0.34.7"
+    "vue-tsc": "^0.34.7",
+    "workbox-cli": "^6.5.3"
   }
 }
