--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,21 @@
 [build.environment]
-  NPM_FLAGS = "--version"
-  NODE_VERSION = "16"
+NODE_VERSION = "16"
+NPM_FLAGS = "--version"
 
 [build]
-  publish = "dist"
-  command = "npx pnpm i --store=node_modules/.pnpm-store && npx pnpm run build"
+command = "npx pnpm i --store=node_modules/.pnpm-store && npx pnpm run build"
+publish = "dist"
 
 [[headers]]
-  for = "/manifest.webmanifest"
-  [headers.values]
-    Content-Type = "application/manifest+json"
+for = "/manifest.webmanifest"
+[headers.values]
+content-type = "application/manifest+json"
+
+[[headers]]
+for = "/*"
+[headers.values]
+referrer-policy = "same-origin"
+strict-transport-security = "max-age=15768000"
+x-content-type-options = "nosniff"
+x-frame-options = "SAMEORIGIN"
+x-xss-protection = "1; mode=block"
